refactor: Update dependencies and improve build process
Updates project dependencies to the latest versions and refactors the build process. This includes adding `tsc` to the build script for type checking and updating import maps in `index.html` to use newer versions of libraries, ensuring better compatibility and access to the latest features. Also, the application name in `package.json` has been changed for clarity.

--- a/index.html
+++ b/index.html
@@ -24,27 +24,24 @@
         border: 1px solid rgba(226, 232, 240, 0.8);
       }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
-    "react-hot-toast": "https://esm.sh/react-hot-toast@2.4.1?external=react,react-dom",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.46.1",
-    "framer-motion": "https://esm.sh/framer-motion@11.11.11?external=react,react-dom",
-    "react-hook-form": "https://esm.sh/react-hook-form@7.54.2?external=react",
-    "zod": "https://esm.sh/zod@3.24.1",
-    "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.10.0/zod?external=react-hook-form,zod",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "framer-motion": "https://esm.sh/framer-motion@^12.29.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.91.0",
+    "react-hot-toast": "https://esm.sh/react-hot-toast@^2.6.0"
   }
 }
 </script>
-  </head>
+</head>
   <body class="bg-[#f8fafc] text-slate-900">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
